--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.0.0",
     "npm": "^6.3.0",
-    "react": "^16.4.2",
+    "react": "^16.4.1",
     "react-dom": "^16.4.2",
     "react-mdl": "^1.11.0",
     "react-native": "^0.56.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
