--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,6 +7,7 @@
     "npm": "^6.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.2",
+    "react-mailto": "^0.4.0",
     "react-mdl": "^1.11.0",
     "react-native": "^0.56.0",
     "react-router-dom": "^4.3.1",
