--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/acecera/react-mdl#readme",
   "dependencies": {
-    "npm": "^6.3.0"
+    "npm": "^6.4.0",
+    "react-mailto": "^0.4.0",
+    "save": "^2.3.2"
   }
 }
